# test-uv-index

./: README.md  pyproject.toml  typos.toml
src/test/: __main__.py
